--- a/src/app/home/components/home-page/home-page.component.css
+++ b/src/app/home/components/home-page/home-page.component.css
@@ -1,6 +1,11 @@
 
 /* @import 'swiper/swiper-bundle.min.css'; */
-
+.showcase-fixedd {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
 .user-info {
   font-family: 'Roboto', sans-serif;
   
@@ -85,3 +90,12 @@
     border-radius: 5px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   }
+
+.nav-custom {
+    position: fixed;
+    background-color: #F7CC00;
+    font-size: 9px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
