--- a/src/app/home/components/home-page/home-page.component.html
+++ b/src/app/home/components/home-page/home-page.component.html
@@ -1,17 +1,18 @@
 <section class="container showcase banner-home-page">
-    <div class="user-info py-2">
-        <h1>Hi Tosh!</h1>
-    </div>
-    <div class="d-flex">
-        <div class="logo col-2">
-            <img class="img-fluid" src="assets/logos/kyosk.png" alt="logo">
+    <div class="showcase-fixed">
+        <div class="user-info py-2">
+            <h1>Hi Tosh!</h1>
         </div>
-        <div class="search col-10 position-relative">
-            <input type="text" class="form-control" placeholder="Search">
-            <i class="fas fa-search position-absolute top-50 translate-middle-y end-0 me-3"></i>
+        <div class="d-flex">
+            <div class="logo col-2">
+                <img class="img-fluid" src="assets/logos/kyosk.png" alt="logo">
+            </div>
+            <div class="search col-10 position-relative">
+                <input type="text" class="form-control" placeholder="Search">
+                <i class="fas fa-search position-absolute top-50 translate-middle-y end-0 me-3"></i>
+            </div>
         </div>
     </div>
-
     <div class="banner-slider py-3">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
            
@@ -50,7 +51,7 @@
     <div class="container py-3">
       <div class="d-flex justify-content-between">
         <h5>Categories</h5>
-        <a href="#">View all</a>
+        <a [routerLink]="['/categories']">View all</a>
       </div>
       <div class="row overflow-scroll hidden-scrollbar">
         <!-- Loading spinner -->
@@ -135,3 +136,29 @@
     </div>
   </section>
   
+  <section class="d-flex nav-custom justify-content-between">
+    <div>
+        <a href="">
+            <i class="fa fa-house-user"></i> <!-- Home icon -->
+            <h6>Home</h6>
+        </a>
+    </div>
+    <div>
+        <a [routerLink]="['/categories']">
+            <i class="fa fa-th-large"></i> <!-- Categories icon -->
+            <h6>Categories</h6>
+        </a>
+    </div>
+    <div>
+        <a href="">
+            <i class="fa fa-shopping-cart"></i> <!-- My Cart icon -->
+            <h6>My Cart</h6>
+        </a>
+    </div>
+    <div>
+        <a href="">
+            <i class="fa fa-user"></i> <!-- Profile or account icon -->
+            <h6>My Account</h6>
+        </a>
+    </div>
+</section>
