added font awesome plus design mods

--- a/src/app/home/components/home-page/home-page.component.css
+++ b/src/app/home/components/home-page/home-page.component.css
@@ -99,3 +99,16 @@
     left: 0;
     width: 100%;
 }
+
+.nav-custom a {
+    text-decoration: none;
+}
+
+.nav-custom i {
+    font-size: 30px;
+    margin: auto;
+}
+
+.nav-custom h6 {
+    font-size: 14px !important;
+}
