--- a/src/app/home/components/home-page/home-page.component.html
+++ b/src/app/home/components/home-page/home-page.component.html
@@ -51,7 +51,7 @@
     <div class="container py-3">
       <div class="d-flex justify-content-between">
         <h5>Categories</h5>
-        <a [routerLink]="['/categories']">View all</a>
+        <a routerLink="/categories" routerLinkActive="active">View all</a>
       </div>
       <div class="row overflow-scroll hidden-scrollbar">
         <!-- Loading spinner -->
@@ -136,29 +136,31 @@
     </div>
   </section>
   
-  <section class="d-flex nav-custom justify-content-between">
+  <section class="d-flex nav-custom justify-content-between p-2">
     <div>
-        <a href="">
+        <a href="" class="d-flex flex-column justify-content-center align-items-center">
             <i class="fa fa-house-user"></i> <!-- Home icon -->
             <h6>Home</h6>
         </a>
     </div>
     <div>
-        <a [routerLink]="['/categories']">
+        <a routerLink='/categories' class="d-flex flex-column justify-content-around align-items-center">
             <i class="fa fa-th-large"></i> <!-- Categories icon -->
             <h6>Categories</h6>
         </a>
     </div>
     <div>
-        <a href="">
+        <a href="" class="d-flex flex-column justify-content-around align-items-center">
             <i class="fa fa-shopping-cart"></i> <!-- My Cart icon -->
             <h6>My Cart</h6>
         </a>
     </div>
     <div>
-        <a href="">
+        <a href="" class="d-flex flex-column justify-content-around align-items-center">
             <i class="fa fa-user"></i> <!-- Profile or account icon -->
             <h6>My Account</h6>
         </a>
     </div>
 </section>
+
+<!-- <router-outlet></router-outlet> -->
